--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1679,6 +1679,7 @@
   "event_date_info": "The event date",
   "event_duration_info": "The event duration",
   "event_time_info": "The event start time",
+  "event_name_info": "The event type name",
   "event_type_not_found": "EventType not Found",
   "location_info": "The location of the event",
   "additional_notes_info": "The additional notes of booking",
@@ -3380,6 +3381,7 @@
   "pbac_action_read_org_bookings": "View Organization Bookings",
   "pbac_action_read_recordings": "View Recordings",
   "role_created_successfully": "Role created successfully",
+  "pbac_resource_all": "All Resources",
   "role_updated_successfully": "Role updated successfully",
   "delete_role": "Delete role",
   "confirm_delete_role": "Are you sure you want to delete this role? This action cannot be undone.",
@@ -3518,7 +3520,6 @@
   "webhook_trigger_event": "The name of the trigger event (e.g., BOOKING_CREATED, BOOKING_CANCELLED)",
   "webhook_created_at": "The time of the webhook",
   "webhook_type": "The event type slug",
-  "webhook_title": "The event type name",
   "webhook_start_time": "The event's start time",
   "webhook_end_time": "The event's end time",
   "webhook_description": "The event's description as described in the event type settings",
