feat: PBAC on team members page + org members page to use specific permissi… (#23004)
* PBAC on team members page + org members page to use specific permissions with fallbacks

* Implement checks on edit sheet fetch to check for permisisons

* WIP permission fixes

* fix tests

* WIP

* fix edit mode perms

* fix remove and list view permissions

* fix add

* feat: add pbac permissions for impersonation (#23035)

* registery + migration + i18n

* UI for can impersonate

* impersonation backend

* remove permission from db query

* add missing prisma import

* add resend invitation and edit mode checks for delete/changeRole

* fix canChangeRole

* canChangeRole gate

* fix permission logic

* fix depends on

* push migration

* fix migration

* fix scoped advanced permissions

* use listMembers instead of invite proxy

* remove isOrgAdmin check to rely on pbac

* wait for session to load before navigating

* use event-types testId to ensure session loaded

* use profile page instead of eventTypes

* use correct roles

* fix wait for session

* correct orgs private isFallBackRoles

* set a timeout on waiting for session

* remove adminOrOwner check since its in fallpack

---------

Co-authored-by: Volnei Munhoz <volnei.munhoz@gmail.com>
Co-authored-by: Eunjae Lee <hey@eunjae.dev>

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -3403,6 +3403,7 @@
   "pbac_action_read_team_bookings": "View Team Bookings",
   "pbac_action_read_org_bookings": "View Organization Bookings",
   "pbac_action_read_recordings": "View Recordings",
+  "pbac_action_impersonate": "Impersonate",
   "role_created_successfully": "Role created successfully",
   "role_updated_successfully": "Role updated successfully",
   "delete_role": "Delete role",
@@ -3437,7 +3438,8 @@
   "pbac_desc_invite_team_members": "Invite team members",
   "pbac_desc_remove_team_members": "Remove team members",
   "pbac_desc_change_team_member_role": "Change role of team members",
-  "pbac_desc_manage_teams": "All actions on teams",
+  "pbac_desc_impersonate_team_members": "Impersonate team members",
+  "pbac_desc_manage_teams": "All actions on teams across organization teams",
   "pbac_desc_create_organization": "Create organization",
   "pbac_desc_view_organization_details": "View organization details",
   "pbac_desc_list_organization_members": "List organization members",
@@ -3445,6 +3447,7 @@
   "pbac_desc_remove_organization_members": "Remove organization members",
   "pbac_desc_manage_organization_billing": "Manage organization billing",
   "pbac_desc_change_organization_member_role": "Change role of organization members",
+  "pbac_desc_impersonate_organization_members": "Impersonate organization members",
   "pbac_desc_edit_organization_settings": "Edit organization settings",
   "pbac_desc_manage_organizations": "All actions on organizations",
   "pbac_desc_view_bookings": "View bookings",
