--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -3573,14 +3573,14 @@
   "webhook_metadata": "Metadata",
   "stats": "Stats",
   "booking_status": "Booking status",
-  "pdf_files_cannot_be_uploaded_as_images": "PDF files cannot be uploaded as images",
+  "unsupported_file_type": "{{type}} files cannot be uploaded as images",
   "only_image_files_allowed": "Only image files are allowed",
-  "html_files_cannot_be_uploaded_as_images": "HTML files cannot be uploaded as images",
-  "script_files_cannot_be_uploaded_as_images": "Script files cannot be uploaded as images",
-  "zip_files_cannot_be_uploaded_as_images": "ZIP files cannot be uploaded as images",
-  "executable_files_cannot_be_uploaded_as_images": "Executable files cannot be uploaded as images",
   "failed_to_validate_image_file": "Failed to validate image file",
-  "invalid_image_file_format": "Invalid image file format",  
+  "invalid_image_file_format": "Invalid image file format",
+  "svg_contains_dangerous_content": "SVG contains potentially dangerous content",
+  "unrecognized_image_format": "Unrecognized image format or invalid file",
+  "invalid_base64_format": "Invalid base64 format",
+  "empty_image_data": "Empty image data",  
   "visit": "Visit",
   "location_custom_label_input_label": "Custom label on booking page",
   "meeting_link": "Meeting link",
