feat: add web phone call for cal ai

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -853,6 +853,7 @@
   "phone_number_for_ai_call": "Phone number (for our agent to call)",
   "buy_a_phone_number_or_import_one_you_already_have": "Buy a phone number or import one you already have on twilio",
   "test_agent": "Test Agent",
+  "test_web_call": "Test Web Call",
   "phone_numbers": "Phone Numbers",
   "unsubscribe": "Unsubscribe",
   "delete_workflow_step": "Delete Workflow Step",
@@ -1469,6 +1470,13 @@
   "app_removed_successfully": "App removed successfully",
   "error_removing_app": "Error removing app",
   "web_conference": "Web conference",
+  "web_call": "Web call",
+  "web_call_test": "Web call test",
+  "start_web_call": "Start web call",
+  "end_call": "End call",
+  "end_and_close": "End call and close",
+  "test_your_agent_with_web_call": "Test your agent with a web call without requiring a phone number",
+  "phone_call": "Phone call",
   "requires_confirmation": "Requires confirmation",
   "requires_confirmation_threshold": "Requires confirmation if booked with < {{time}} $t({{unit}}_timeUnit) notice",
   "may_require_confirmation": "May require confirmation",
