clean up workflow actions

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1422,11 +1422,14 @@
   "new_event_trigger": "when new event is booked",
   "email_host_action": "send email to host",
   "email_attendee_action": "send email to attendees",
+  "email_attendee_action_form": "Send email to provided email address",
   "sms_attendee_action": "Send SMS to attendee",
+  "sms_attendee_action_form": "Send SMS to provided phone number",
   "sms_number_action": "send SMS to a specific number",
   "send_reminder_sms": "Easily send meeting reminders via SMS to your attendees",
   "whatsapp_number_action": "send WhatsApp message to a specific number",
   "whatsapp_attendee_action": "send WhatsApp message to attendee",
+  "whatsapp_attendee_action_form": "Send WhatsApp to provided phone number",
   "workflows": "Workflows",
   "new_workflow_btn": "New Workflow",
   "add_new_workflow": "Add a new workflow",
