refactor: web call improvements

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1477,6 +1477,19 @@
   "end_and_close": "End call and close",
   "test_your_agent_with_web_call": "Test your agent with a web call without requiring a phone number",
   "phone_call": "Phone call",
+  "connecting_to_agent": "Connecting to agent...",
+  "call_active_duration": "Call active - {{duration}}",
+  "call_ended_duration": "Call ended - Duration: {{duration}}",
+  "call_error": "Call error",
+  "ready_to_start_call": "Ready to start call",
+  "failed_to_start_web_call_try_again": "Failed to start web call. Please try again.",
+  "call_encountered_error_try_again": "Call encountered an error. Please try again.",
+  "failed_initialize_web_call_microphone_permissions": "Failed to initialize web call. Please ensure microphone permissions are granted.",
+  "start_call_to_see_conversation": "Start a call to see the conversation",
+  "waiting_for_conversation": "Waiting for conversation...",
+  "ai_agent": "AI Agent",
+  "live": "Live",
+  "connecting": "Connecting...",
   "requires_confirmation": "Requires confirmation",
   "requires_confirmation_threshold": "Requires confirmation if booked with < {{time}} $t({{unit}}_timeUnit) notice",
   "may_require_confirmation": "May require confirmation",
@@ -1709,6 +1722,7 @@
   "transcription_enabled": "Transcriptions are enabled now",
   "transcription_stopped": "Transcriptions are stopped now",
   "download_transcript": "Download Transcript",
+  "transcript": "Transcript",
   "recording_from_your_recent_call": "A recording from your recent call on {{appName}} is ready for download",
   "transcript_from_previous_call": "Transcript from your recent call on {{appName}} is ready to download. Links are valid only for 1 Hour",
   "you_can_download_transcript_from_attachments": "You can also download transcript from attachments",
