--- a/apps/web/public/static/locales/bg/common.json
+++ b/apps/web/public/static/locales/bg/common.json
@@ -3591,5 +3591,6 @@
   "consider_consolidating_multi_team_org": "Помислете за създаване на организация, за да обедините таксуването, административните инструменти и анализите за вашите екипи.",
   "search_variables": "Търсене на променливи",
   "no_variables_found": "Не са намерени променливи",
+  "api_key_name_too_long": "Името не трябва да надвишава {{max}} символа",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Добавете новите си низове над този ред ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
