--- a/apps/web/public/static/locales/ru/common.json
+++ b/apps/web/public/static/locales/ru/common.json
@@ -3591,5 +3591,6 @@
   "consider_consolidating_multi_team_org": "Рассмотрите возможность создания организации для объединения выставления счетов, административных инструментов и аналитики в ваших командах.",
   "search_variables": "Поиск переменных",
   "no_variables_found": "Переменные не найдены",
+  "api_key_name_too_long": "Имя не должно превышать {{max}} символов",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Добавьте строки выше ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
