--- a/apps/web/public/static/locales/ko/common.json
+++ b/apps/web/public/static/locales/ko/common.json
@@ -3591,5 +3591,6 @@
   "consider_consolidating_multi_team_org": "여러 팀 전체의 결제, 관리 도구 및 분석을 통합하기 위해 조직 설정을 고려해 보세요.",
   "search_variables": "변수 검색",
   "no_variables_found": "변수를 찾을 수 없음",
+  "api_key_name_too_long": "이름은 {{max}}자를 초과할 수 없습니다",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ 여기에 새 문자열을 추가하세요 ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
