--- a/apps/web/public/static/locales/sv/common.json
+++ b/apps/web/public/static/locales/sv/common.json
@@ -3591,5 +3591,6 @@
   "consider_consolidating_multi_team_org": "Överväg att skapa en organisation för att förena fakturering, administratörsverktyg och analys för dina team.",
   "search_variables": "Sök variabler",
   "no_variables_found": "Inga variabler hittades",
+  "api_key_name_too_long": "Namnet får inte överstiga {{max}} tecken",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
