--- a/apps/web/public/static/locales/vi/common.json
+++ b/apps/web/public/static/locales/vi/common.json
@@ -3591,5 +3591,6 @@
   "consider_consolidating_multi_team_org": "Hãy cân nhắc thiết lập một tổ chức để hợp nhất thanh toán, công cụ quản trị và phân tích cho các nhóm của bạn.",
   "search_variables": "Tìm kiếm biến",
   "no_variables_found": "Không tìm thấy biến nào",
+  "api_key_name_too_long": "Tên không được vượt quá {{max}} ký tự",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
