--- a/apps/web/public/static/locales/zh-CN/common.json
+++ b/apps/web/public/static/locales/zh-CN/common.json
@@ -3591,5 +3591,6 @@
   "consider_consolidating_multi_team_org": "建议设置一个组织，以统一多个团队的账单、管理工具和分析功能。",
   "search_variables": "搜索变量",
   "no_variables_found": "未找到变量",
+  "api_key_name_too_long": "名称不得超过{{max}}个字符",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ 在此上方添加您的新字符串 ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
