feat: update translations via @LingoDotDev

--- a/apps/web/public/static/locales/az/common.json
+++ b/apps/web/public/static/locales/az/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Rezervasiya zamanı əlavə qeydlərin doldurulmasını tələb edin",
   "email_address_action": "müəyyən bir e-poçt ünvanına e-poçt göndərin",
   "after_event_trigger": "hadisə bitdikdən sonra",
+  "booking_rejected_trigger": "rezervasiya rədd edildikdə",
+  "booking_requested_trigger": "rezervasiya tələb olunduqda",
+  "booking_payment_initiated_trigger": "rezervasiya ödənişi başladıldıqda",
+  "booking_paid_trigger": "rezervasiya ödənişi uğurlu olduqda",
+  "booking_no_show_updated_trigger": "rezervasiya gəlməmə halı yeniləndikdə",
   "how_long_after": "Hadisə bitdikdən nə qədər sonra?",
   "how_long_after_hosts_no_show": "Ev sahibləri Cal video görüşünə gəlmədikdən nə qədər sonra?",
   "how_long_after_guests_no_show": "Qonaqlar Cal video görüşünə gəlmədikdən nə qədər sonra?",
