--- a/apps/web/public/static/locales/da/common.json
+++ b/apps/web/public/static/locales/da/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Kræv yderligere noter der skal udfyldes ved booking",
   "email_address_action": "send e-mail til en specifik e-mailadresse",
   "after_event_trigger": "efter begivenheden slutter",
+  "booking_rejected_trigger": "når booking afvises",
+  "booking_requested_trigger": "når booking anmodes om",
+  "booking_payment_initiated_trigger": "når bookingbetaling påbegyndes",
+  "booking_paid_trigger": "når bookingbetalingen er gennemført",
+  "booking_no_show_updated_trigger": "når booking no-show opdateres",
   "how_long_after": "Hvor længe efter begivenheden slutter?",
   "how_long_after_hosts_no_show": "Hvor lang tid efter værter ikke dukker op til cal video møde?",
   "how_long_after_guests_no_show": "Hvor lang tid efter gæster ikke dukker op til cal video møde?",
