--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Zusätzliche Notizen bei der Buchung erforderlich machen",
   "email_address_action": "eine E-Mail an eine bestimmte E-Mail-Adresse senden",
   "after_event_trigger": "nach Ende des Termins",
+  "booking_rejected_trigger": "wenn eine Buchung abgelehnt wird",
+  "booking_requested_trigger": "wenn eine Buchung angefragt wird",
+  "booking_payment_initiated_trigger": "wenn eine Buchungszahlung eingeleitet wird",
+  "booking_paid_trigger": "wenn eine Buchungszahlung erfolgreich ist",
+  "booking_no_show_updated_trigger": "wenn ein Nichterscheinen bei einer Buchung aktualisiert wird",
   "how_long_after": "Wie lange nach Ende des Termins?",
   "how_long_after_hosts_no_show": "Wie lange nachdem Gastgeber nicht zum Cal-Video-Meeting erscheinen?",
   "how_long_after_guests_no_show": "Wie lange nachdem Gäste nicht zum Cal-Video-Meeting erscheinen?",
