--- a/apps/web/public/static/locales/eu/common.json
+++ b/apps/web/public/static/locales/eu/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Erreserba egiterakoan ohar gehigarriak betetzea beharrezkoa izan dadila",
   "email_address_action": "bidali emaila email helbide jakin batera",
   "after_event_trigger": "gertaera bukatu ondoren",
+  "booking_rejected_trigger": "erreserba errefusatzen denean",
+  "booking_requested_trigger": "erreserba eskatzen denean",
+  "booking_payment_initiated_trigger": "erreserba ordainketa hasten denean",
+  "booking_paid_trigger": "erreserba ordainketa arrakastatsua denean",
+  "booking_no_show_updated_trigger": "ez agertzea eguneratzen denean",
   "how_long_after": "Gertaera bukatzen denetik zenbat denborara?",
   "how_long_after_hosts_no_show": "Zenbat denbora igaro behar da ostalariak Cal bideo-bileran agertzen ez direnean?",
   "how_long_after_guests_no_show": "Zenbat denbora igaro behar da gonbidatuak Cal bideo-bileran agertzen ez direnean?",
