--- a/apps/web/public/static/locales/fi/common.json
+++ b/apps/web/public/static/locales/fi/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Vaadi lisätietojen täyttämistä varauksen yhteydessä",
   "email_address_action": "lähetä sähköposti tiettyyn osoitteeseen",
   "after_event_trigger": "tapahtuman päättymisen jälkeen",
+  "booking_rejected_trigger": "kun varaus hylätään",
+  "booking_requested_trigger": "kun varaus pyydetään",
+  "booking_payment_initiated_trigger": "kun varauksen maksu aloitetaan",
+  "booking_paid_trigger": "kun varauksen maksu onnistuu",
+  "booking_no_show_updated_trigger": "kun varauksen no-show päivitetään",
   "how_long_after": "Kuinka kauan tapahtuman päättymisen jälkeen?",
   "how_long_after_hosts_no_show": "Kuinka kauan sen jälkeen, kun järjestäjät eivät saavu Cal-videotapaamiseen?",
   "how_long_after_guests_no_show": "Kuinka kauan sen jälkeen, kun vieraat eivät saavu Cal-videotapaamiseen?",
