--- a/apps/web/public/static/locales/fr/common.json
+++ b/apps/web/public/static/locales/fr/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Exigez des notes supplémentaires à saisir lors de la réservation.",
   "email_address_action": "envoyer un e-mail à une adresse e-mail spécifique",
   "after_event_trigger": "après la fin de l'événement",
+  "booking_rejected_trigger": "lorsque la réservation est rejetée",
+  "booking_requested_trigger": "lorsque la réservation est demandée",
+  "booking_payment_initiated_trigger": "lorsque le paiement de la réservation est initié",
+  "booking_paid_trigger": "lorsque le paiement de la réservation est réussi",
+  "booking_no_show_updated_trigger": "lorsque l'absence au rendez-vous est mise à jour",
   "how_long_after": "Combien de temps après la fin de l'événement ?",
   "how_long_after_hosts_no_show": "Combien de temps après que les hôtes ne se présentent pas à la réunion vidéo Cal ?",
   "how_long_after_guests_no_show": "Combien de temps après que les invités ne se présentent pas à la réunion vidéo Cal ?",
