--- a/apps/web/public/static/locales/he/common.json
+++ b/apps/web/public/static/locales/he/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "לדרוש למלא הערות נוספות בעת ביצוע הזמנה",
   "email_address_action": "לשלוח דוא״ל לכתובת מסוימת",
   "after_event_trigger": "לאחר סיום האירוע",
+  "booking_rejected_trigger": "כאשר הזמנה נדחית",
+  "booking_requested_trigger": "כאשר מתקבלת בקשת הזמנה",
+  "booking_payment_initiated_trigger": "כאשר מופעל תשלום על הזמנה",
+  "booking_paid_trigger": "כאשר התשלום על ההזמנה הושלם בהצלחה",
+  "booking_no_show_updated_trigger": "כאשר מתעדכן סטטוס אי-הופעה בהזמנה",
   "how_long_after": "כמה זמן לאחר סיום האירוע?",
   "how_long_after_hosts_no_show": "כמה זמן לאחר שהמארחים לא מופיעים בשיחת הווידאו ב-Cal?",
   "how_long_after_guests_no_show": "כמה זמן לאחר שהאורחים לא מופיעים בשיחת הווידאו ב-Cal?",
