--- a/apps/web/public/static/locales/ja/common.json
+++ b/apps/web/public/static/locales/ja/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "予約を行う際には追加のメモを入力する必要があります",
   "email_address_action": "特定のメールアドレスにメールを送信する",
   "after_event_trigger": "イベントの終了後",
+  "booking_rejected_trigger": "予約が拒否された時",
+  "booking_requested_trigger": "予約がリクエストされた時",
+  "booking_payment_initiated_trigger": "予約の支払いが開始された時",
+  "booking_paid_trigger": "予約の支払いが完了した時",
+  "booking_no_show_updated_trigger": "予約の不参加が更新された時",
   "how_long_after": "イベント終了後のどのくらい後にしますか？",
   "how_long_after_hosts_no_show": "ホストがCalビデオ会議に現れない場合、どのくらい後に？",
   "how_long_after_guests_no_show": "ゲストがCalビデオ会議に現れない場合、どのくらい後に？",
