--- a/apps/web/public/static/locales/km/common.json
+++ b/apps/web/public/static/locales/km/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "តម្រូវឱ្យមានកំណត់ចំណាំបន្ថែមត្រូវបានបំពេញនៅពេលកក់",
   "email_address_action": "ផ្ញើអ៊ីមែលទៅអាសយដ្ឋានអ៊ីមែលជាក់លាក់",
   "after_event_trigger": "បន្ទាប់ពីព្រឹត្តិការណ៍បញ្ចប់",
+  "booking_rejected_trigger": "នៅពេលការកក់ត្រូវបានបដិសេធ",
+  "booking_requested_trigger": "នៅពេលការកក់ត្រូវបានស្នើសុំ",
+  "booking_payment_initiated_trigger": "នៅពេលការទូទាត់ការកក់ត្រូវបានចាប់ផ្តើម",
+  "booking_paid_trigger": "នៅពេលការទូទាត់ការកក់ជោគជ័យ",
+  "booking_no_show_updated_trigger": "នៅពេលការកក់មិនបានមកត្រូវបានធ្វើបច្ចុប្បន្នភាព",
   "how_long_after": "បន្ទាប់ពីព្រឹត្តិការណ៍បញ្ចប់យូរប៉ុណ្ណា?",
   "how_long_after_hosts_no_show": "តើបន្ទាប់ពីម្ចាស់ផ្ទះមិនបង្ហាញខ្លួនក្នុងកិច្ចប្រជុំវីដេអូ cal រយៈពេលប៉ុន្មាន?",
   "how_long_after_guests_no_show": "តើបន្ទាប់ពីភ្ញៀវមិនបង្ហាញខ្លួនក្នុងកិច្ចប្រជុំវីដេអូ cal រយៈពេលប៉ុន្មាន?",
