--- a/apps/web/public/static/locales/ko/common.json
+++ b/apps/web/public/static/locales/ko/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "예약 시 추가 메모를 작성해야 합니다",
   "email_address_action": "특정 이메일 주소로 이메일 발송",
   "after_event_trigger": "이벤트 종료 후",
+  "booking_rejected_trigger": "예약이 거부될 때",
+  "booking_requested_trigger": "예약이 요청될 때",
+  "booking_payment_initiated_trigger": "예약 결제가 시작될 때",
+  "booking_paid_trigger": "예약 결제가 성공했을 때",
+  "booking_no_show_updated_trigger": "예약 불참 정보가 업데이트될 때",
   "how_long_after": "이벤트 종료 후 얼마나 경과해야 합니까?",
   "how_long_after_hosts_no_show": "호스트가 Cal 비디오 회의에 나타나지 않은 후 얼마나 시간이 지나야 하나요?",
   "how_long_after_guests_no_show": "게스트가 Cal 비디오 회의에 나타나지 않은 후 얼마나 시간이 지나야 하나요?",
