--- a/apps/web/public/static/locales/pl/common.json
+++ b/apps/web/public/static/locales/pl/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Wymagaj wypełnienia dodatkowych uwag przy rezerwacji",
   "email_address_action": "wyślij wiadomość e-mail na określony adres e-mail",
   "after_event_trigger": "po zakończeniu wydarzenia",
+  "booking_rejected_trigger": "gdy rezerwacja zostanie odrzucona",
+  "booking_requested_trigger": "gdy zostanie złożona prośba o rezerwację",
+  "booking_payment_initiated_trigger": "gdy płatność za rezerwację zostanie rozpoczęta",
+  "booking_paid_trigger": "gdy płatność za rezerwację zakończy się pomyślnie",
+  "booking_no_show_updated_trigger": "gdy status nieobecności na spotkaniu zostanie zaktualizowany",
   "how_long_after": "Jak długo po zakończeniu wydarzenia?",
   "how_long_after_hosts_no_show": "Jak długo po tym, jak gospodarze nie pojawią się na spotkaniu wideo na Cal?",
   "how_long_after_guests_no_show": "Jak długo po tym, jak goście nie pojawią się na spotkaniu wideo na Cal?",
