--- a/apps/web/public/static/locales/vi/common.json
+++ b/apps/web/public/static/locales/vi/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Cần điền vào ghi chú thêm khi đặt lịch hẹn",
   "email_address_action": "gửi email đến một địa chỉ email cụ thể",
   "after_event_trigger": "sau khi sự kiện kết thúc",
+  "booking_rejected_trigger": "khi lịch hẹn bị từ chối",
+  "booking_requested_trigger": "khi lịch hẹn được yêu cầu",
+  "booking_payment_initiated_trigger": "khi thanh toán lịch hẹn được bắt đầu",
+  "booking_paid_trigger": "khi thanh toán lịch hẹn thành công",
+  "booking_no_show_updated_trigger": "khi cập nhật tình trạng không xuất hiện",
   "how_long_after": "Bao lâu sau khi sự kiện kết thúc?",
   "how_long_after_hosts_no_show": "Bao lâu sau khi người tổ chức không xuất hiện trong cuộc họp video trên Cal?",
   "how_long_after_guests_no_show": "Bao lâu sau khi khách mời không xuất hiện trong cuộc họp video trên Cal?",
