--- a/apps/web/public/static/locales/zh-TW/common.json
+++ b/apps/web/public/static/locales/zh-TW/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "預約時需填寫額外備註",
   "email_address_action": "寄電子郵件至特定的電子郵件地址",
   "after_event_trigger": "活動結束過後",
+  "booking_rejected_trigger": "當預約被拒絕時",
+  "booking_requested_trigger": "當提出預約時",
+  "booking_payment_initiated_trigger": "當發起預約付款時",
+  "booking_paid_trigger": "當預約付款成功時",
+  "booking_no_show_updated_trigger": "當預約未出席被更新時",
   "how_long_after": "活動結束過後多久？",
   "how_long_after_hosts_no_show": "主持人未出現在 Cal 視訊會議後多久？",
   "how_long_after_guests_no_show": "賓客未出現在 Cal 視訊會議後多久？",
