--- a/apps/web/public/static/locales/ar/common.json
+++ b/apps/web/public/static/locales/ar/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "يتطلب ملء ملاحظات إضافية عند الحجز",
   "email_address_action": "إرسال بريد إلكتروني إلى عنوان بريد إلكتروني محدد",
   "after_event_trigger": "بعد انتهاء الحدث",
+  "booking_rejected_trigger": "عند رفض الحجز",
+  "booking_requested_trigger": "عند طلب الحجز",
+  "booking_payment_initiated_trigger": "عند بدء الدفع للحجز",
+  "booking_paid_trigger": "عند نجاح الدفع للحجز",
+  "booking_no_show_updated_trigger": "عند تحديث حالة عدم الحضور للحجز",
   "how_long_after": "كم من الوقت بعد انتهاء الحدث؟",
   "how_long_after_hosts_no_show": "كم من الوقت بعد عدم ظهور المضيفين في اجتماع فيديو Cal؟",
   "how_long_after_guests_no_show": "كم من الوقت بعد عدم ظهور الضيوف في اجتماع فيديو Cal؟",
