--- a/apps/web/public/static/locales/bg/common.json
+++ b/apps/web/public/static/locales/bg/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Изискване на попълване на допълнителни бележки при резервация",
   "email_address_action": "изпращане на имейл до конкретен имейл адрес",
   "after_event_trigger": "след края на събитието",
+  "booking_rejected_trigger": "когато резервацията е отхвърлена",
+  "booking_requested_trigger": "когато резервацията е заявена",
+  "booking_payment_initiated_trigger": "когато плащането за резервацията е инициирано",
+  "booking_paid_trigger": "когато плащането за резервацията е успешно",
+  "booking_no_show_updated_trigger": "когато статусът за неявяване е актуализиран",
   "how_long_after": "Колко време след края на събитието?",
   "how_long_after_hosts_no_show": "Колко време след като домакините не се появят на видео срещата в cal?",
   "how_long_after_guests_no_show": "Колко време след като гостите не се появят на видео срещата в cal?",
