--- a/apps/web/public/static/locales/cs/common.json
+++ b/apps/web/public/static/locales/cs/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Požadovat vyplnění doplňujících poznámek při rezervaci",
   "email_address_action": "odeslat e-mail na specifickou e-mailovou adresu",
   "after_event_trigger": "po ukončení události",
+  "booking_rejected_trigger": "když je rezervace zamítnuta",
+  "booking_requested_trigger": "když je rezervace vyžádána",
+  "booking_payment_initiated_trigger": "když je zahájena platba za rezervaci",
+  "booking_paid_trigger": "když je platba za rezervaci úspěšná",
+  "booking_no_show_updated_trigger": "když je aktualizována nepřítomnost na rezervaci",
   "how_long_after": "Jak dlouho po ukončení události?",
   "how_long_after_hosts_no_show": "Jak dlouho po tom, co se hostitelé neobjeví na cal video schůzce?",
   "how_long_after_guests_no_show": "Jak dlouho po tom, co se hosté neobjeví na cal video schůzce?",
