--- a/apps/web/public/static/locales/es/common.json
+++ b/apps/web/public/static/locales/es/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Solicitar completar las notas adicionales al reservar",
   "email_address_action": "enviar un correo electrónico a una dirección específica",
   "after_event_trigger": "después de que el evento termine",
+  "booking_rejected_trigger": "cuando la reserva es rechazada",
+  "booking_requested_trigger": "cuando la reserva es solicitada",
+  "booking_payment_initiated_trigger": "cuando el pago de la reserva es iniciado",
+  "booking_paid_trigger": "cuando el pago de la reserva es exitoso",
+  "booking_no_show_updated_trigger": "cuando la no presentación de la reserva es actualizada",
   "how_long_after": "¿Cuánto tiempo después de que termine el evento?",
   "how_long_after_hosts_no_show": "¿Cuánto tiempo después de que los anfitriones no se presenten en la reunión de video de Cal?",
   "how_long_after_guests_no_show": "¿Cuánto tiempo después de que los invitados no se presenten en la reunión de video de Cal?",
