--- a/apps/web/public/static/locales/hu/common.json
+++ b/apps/web/public/static/locales/hu/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Kötelező kitölteni az egyéb megjegyzéeseket a foglaláshoz",
   "email_address_action": "küldjön e-mailt egy adott e-mail címre",
   "after_event_trigger": "az esemény befejezése után",
+  "booking_rejected_trigger": "amikor a foglalás visszautasításra kerül",
+  "booking_requested_trigger": "amikor foglalást kérnek",
+  "booking_payment_initiated_trigger": "amikor a foglalási fizetés elindításra kerül",
+  "booking_paid_trigger": "amikor a foglalási fizetés sikeres",
+  "booking_no_show_updated_trigger": "amikor a foglalás meg nem jelenése frissítésre kerül",
   "how_long_after": "Mennyi idővel az esemény vége után?",
   "how_long_after_hosts_no_show": "Mennyi idő után, ha a házigazdák nem jelennek meg a cal videó találkozón?",
   "how_long_after_guests_no_show": "Mennyi idő után, ha a vendégek nem jelennek meg a cal videó találkozón?",
