--- a/apps/web/public/static/locales/no/common.json
+++ b/apps/web/public/static/locales/no/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Krev at tilleggsinformasjon fylles ut når man booker",
   "email_address_action": "sende e-post til en bestemt e-postadresse",
   "after_event_trigger": "etter at hendelsen er ferdig",
+  "booking_rejected_trigger": "når bestilling blir avvist",
+  "booking_requested_trigger": "når bestilling blir forespurt",
+  "booking_payment_initiated_trigger": "når betaling for bestilling blir initiert",
+  "booking_paid_trigger": "når betaling for bestilling er vellykket",
+  "booking_no_show_updated_trigger": "når manglende oppmøte for bestilling blir oppdatert",
   "how_long_after": "Hvor lenge etter at hendelsen er ferdig?",
   "how_long_after_hosts_no_show": "Hvor lenge etter at verter ikke dukker opp på cal videomøte?",
   "how_long_after_guests_no_show": "Hvor lenge etter at gjester ikke dukker opp på cal videomøte?",
