--- a/apps/web/public/static/locales/ro/common.json
+++ b/apps/web/public/static/locales/ro/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Solicitați completarea unor observații suplimentare la momentul rezervării",
   "email_address_action": "trimiteți e-mail către o anumită adresă de e-mail",
   "after_event_trigger": "după finalul evenimentului",
+  "booking_rejected_trigger": "când rezervarea este respinsă",
+  "booking_requested_trigger": "când rezervarea este solicitată",
+  "booking_payment_initiated_trigger": "când plata rezervării este inițiată",
+  "booking_paid_trigger": "când plata rezervării este finalizată cu succes",
+  "booking_no_show_updated_trigger": "când rezervarea fără prezentare este actualizată",
   "how_long_after": "La cât timp după finalul evenimentului?",
   "how_long_after_hosts_no_show": "Cât timp după ce gazdele nu apar la întâlnirea video cal?",
   "how_long_after_guests_no_show": "Cât timp după ce invitații nu apar la întâlnirea video cal?",
