--- a/apps/web/public/static/locales/sv/common.json
+++ b/apps/web/public/static/locales/sv/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Kräv ytterligare anteckningar som ska fyllas i vid bokning",
   "email_address_action": "skicka e-post till en specifik e-postadress",
   "after_event_trigger": "efter händelsens slut",
+  "booking_rejected_trigger": "när bokningen avvisas",
+  "booking_requested_trigger": "när bokningen begärs",
+  "booking_payment_initiated_trigger": "när bokningsbetalningen initieras",
+  "booking_paid_trigger": "när bokningsbetalningen är framgångsrik",
+  "booking_no_show_updated_trigger": "när bokningens no-show uppdateras",
   "how_long_after": "Hur länge efter händelsens slut?",
   "how_long_after_hosts_no_show": "Hur länge efter att värdarna inte dyker upp på cal video-mötet?",
   "how_long_after_guests_no_show": "Hur länge efter att gästerna inte dyker upp på cal video-mötet?",
