--- a/apps/web/public/static/locales/tr/common.json
+++ b/apps/web/public/static/locales/tr/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "Rezervasyon sırasında doldurulacak ek not isteyin",
   "email_address_action": "belirli bir e-posta adresine e-posta gönder",
   "after_event_trigger": "etkinlik sona erdikten sonra",
+  "booking_rejected_trigger": "rezervasyon reddedildiğinde",
+  "booking_requested_trigger": "rezervasyon talep edildiğinde",
+  "booking_payment_initiated_trigger": "rezervasyon ödemesi başlatıldığında",
+  "booking_paid_trigger": "rezervasyon ödemesi başarılı olduğunda",
+  "booking_no_show_updated_trigger": "rezervasyon no-show durumu güncellendiğinde",
   "how_long_after": "Etkinlik sona erdikten ne kadar sonra?",
   "how_long_after_hosts_no_show": "Ev sahipleri Cal video toplantısına katılmadığında ne kadar süre sonra?",
   "how_long_after_guests_no_show": "Misafirler Cal video toplantısına katılmadığında ne kadar süre sonra?",
