--- a/apps/web/public/static/locales/zh-CN/common.json
+++ b/apps/web/public/static/locales/zh-CN/common.json
@@ -1855,6 +1855,11 @@
   "require_additional_notes_description": "预约时需要填写附加备注",
   "email_address_action": "将电子邮件发送到指定的电子邮件地址",
   "after_event_trigger": "活动结束后",
+  "booking_rejected_trigger": "当预约被拒绝时",
+  "booking_requested_trigger": "当预约被请求时",
+  "booking_payment_initiated_trigger": "当预约付款被发起时",
+  "booking_paid_trigger": "当预约付款成功时",
+  "booking_no_show_updated_trigger": "当预约未到场被更新时",
   "how_long_after": "活动结束后多久?",
   "how_long_after_hosts_no_show": "主持人未出现在 Cal 视频会议后多长时间？",
   "how_long_after_guests_no_show": "嘉宾未出现在 Cal 视频会议后多长时间？",
